src/ui/snapshots/ldash__ui__tests__snapshot_dashboard_tab.snap
---
source: src/ui/mod.rs
expression: render_to_string(&mut app)
---
  ⬡ Ledger Dashboard
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   Dashboard   │   Accounts   │   Monthly   │   Register   │   Portfolio                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯


  ╭ February  [←/→ month]  [G current] ────────────────────╮╭ Month Overview ────────────────────────────────────────╮
  │                                                        ││                                                        │
  │                                                        ││                                                        │
  │                                                        ││    ████████         ████████                           │
  │    Total Income                            3.000,00    ││    ████████         ████████                           │
  │                                                        ││    ████████         ████████                           │
  │    Recurring Income                        3.000,00    ││    ████████         ████████                           │
  │                                                        ││    ████████         ████████         ▇▇▇▇▇▇▇▇          │
  │    Recurring Expenses                      1.650,00    ││    ████████         ████████         ████████          │
  │                                                        ││    ████████         ████████         ████████          │
  │    Other Expenses                              0,00    ││    ████████         ████████         ████████          │
  │                                                        ││    ██3000██         ██3000██         ██1650██          │
  │    Total Expenses                          1.650,00    ││    Income           Rec. In          Expenses          │
  │                                                        ││                                                        │
  ╰────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────╯


  ╭ Top 5 Categories ──────────────────────────────────────╮╭ Cash Accounts ─────────────────────────────────────────╮
  │                                                        ││                                                        │
  │                                                        ││                                                        │
  │                                                        ││    0,0 │   ⢸                                           │
  │       ⣀⣤⣶⣶⣶⣶⣤⣀                                         ││    -100│   ⢸                                           │
  │     ⢠⣾⣿⣿⣿⠿⠿⣿⣿⣿⣷⡄    ■ housing       72.7%  1.200 €     ││    -200│ ⢀⠎⢸                                           │
  │    ⢠⣿⣿⣿⠋    ⠙⣿⣿⣿⡄                                      ││    -300│⡰⠁ ⢸                                           │
  │    ⢸⣿⣿⡇      ⢸⣿⣿⡇   ■ food          27.3%  450 €       ││        └───────────────────────────────────────────    │
  │    ⠘⣿⣿⣿⣄    ⣠⣿⣿⣿⠃                                      ││      Jan             ▲Feb       Jun             Dec    │
  │     ⠘⢿⣿⣿⣿⣶⣶⣿⣿⣿⡿⠃                                       ││    ■ bank:checking                                     │
  │       ⠉⠛⠿⠿⠿⠿⠛⠉                                         ││                                                        │
  │                                                        ││    Total 4.200 €   YTD through February -100 €         │
  │                                                        ││                                                        │
  ╰────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────╯


Test mode  [1-4] tab  [↑↓/jk] navigate  [PgUp/PgDn/Home/End] scroll  [←→/hl] month/range  [^O] open file  [r] refresh  [
