src/ui/snapshots/ldash__ui__tests__snapshot_monthly_tab_with_liquid_cash.snap
---
source: src/ui/mod.rs
expression: render_to_string(&mut app)
---
  ⬡ Ledger Dashboard
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   Accounts   │   Monthly   │   Portfolio                                                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Income vs Expenses  [C yoy]  [F forecast]  [G last entry] ─────╮╭ Forecast ~1.325€/mo ───────────────────────────────╮
│                                                                ││1k  │⣀⣀⡠⠤•••••••••••••••••••••••••••••••••••••••••••│
│ ███     ███                                                    ││    │                                               │
│ ███     ███                                                    ││    │                                               │
│ ███     ███                                                    ││    │                                               │
│ ███▄▄▄  ███▃▃▃                                                 ││675 │                                               │
│ ██████  ██████                                                 ││    │                                               │
│ ██████  ██████                                                 ││    │                                               │
│ ██████  ██████                                                 ││-135│                                               │
│ ██████  ██████                                                 ││    └───────────────────────────────────────────────│
│ Jan     Feb                                                    ││  Jan            Apr      Jul      Oct           Dec│
╰────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────────╯
╭ ◀ February ▶ ────────────────────╮╭ Savings Rate ────────────────────╮╭ Year to Date ────────────────────────────────╮
│  Income    3.000,00 €            ││███████████████                   ││  Net YTD   +2.650 €  (44% saved)             │
│  Expenses  1.650,00 €            ││███████████████                   ││  Best      Feb (+1.350 €)                    │
│  Net       +1.350,00 €           ││███████████████                   ││  Worst     Jan (1.300 €)                     │
│  Liquid Chg +4.200,00 €          ││███████████████                   ││ Income ▁▃▅ ──────────────────────────────────│
│                                  ││███████████████                   ││██                                            │
│                                  ││███████████████                   ││██                                            │
│                                  ││████████████45% saved             ││ Expenses ▁▃▅ ────────────────────────────────│
│                                  ││███████████████                   ││█▇                                            │
│                                  ││███████████████                   ││██                                            │
│                                  ││███████████████                   ││ Net ▁▃▅ ─────────────────────────────────────│
│                                  ││███████████████                   ││▇█                                            │
│                                  ││███████████████                   ││██                                            │
╰──────────────────────────────────╯╰──────────────────────────────────╯╰──────────────────────────────────────────────╯
╭ Income  [i] focus  [Enter] detail ───────────────────────╮╭ Expenses ────────────────────────────────────────────────╮
│  Source                                      Amount      ││  Category                                    Amount      │
│                                                          ││                                                          │
│▶ salary                                      3.000,00 €  ││▶ housing                                     1.200,00 €  │
│                                                          ││  food                                        450,00 €    │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
Test mode  [1-3] tab  [↑↓/jk] navigate  [PgUp/PgDn/Home/End] scroll  [←→/hl] month/range  [^O] open file  [r] refresh  [
