src/ui/snapshots/ldash__ui__tests__snapshot_register_empty.snap
---
source: src/ui/mod.rs
expression: render_to_string(&mut app)
---
  ⬡ Ledger Dashboard
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   Dashboard   │   Accounts   │   Monthly   │   Register   │   Portfolio                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Query  [Enter apply]  [Esc rows] ────────────────────────────────────────────────────────────────────────────────────╮
│  /                                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  2026-08  [h/l month]  [gg/G top/bottom]  [Enter txn]
╭ Register ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                    No transactions                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Test mode  [1-4] tab  [↑↓/jk] navigate  [PgUp/PgDn/Home/End] scroll  [←→/hl] month/range  [^O] open file  [r] refresh  [
