src/ui/snapshots/ldash__ui__tests__snapshot_register_grouped_postings.snap
---
source: src/ui/mod.rs
expression: render_to_string(&mut app)
---
  ⬡ Ledger Dashboard
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   Accounts   │   Monthly   │   Register   │   Portfolio                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Query  [Enter apply]  [Esc rows] ────────────────────────────────────────────────────────────────────────────────────╮
│  /                                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  2026-01  [h/l month]  [Enter txn]
╭ Register  1 txns ────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Date         St  Description                         Account                             Amount         Total         │
│                                                                                                                      │
│2026-01-15       Salary                              income:salary                         -2.000,00 €    -2.000,00 € │
│                                                     assets:bank:checking                   2.000,00 €         0,00 € │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Test mode  [1-4] tab  [↑↓/jk] navigate  [PgUp/PgDn/Home/End] scroll  [←→/hl] month/range  [^O] open file  [r] refresh  [
